// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/ContactsField render should have scrollable dropdown if contacts > 5 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={false}
  className="scrollable"
  disabled={false}
  error=""
  inputProps={
    Object {
      "autoFocus": true,
      "onChange": [Function],
    }
  }
  label={
    <FormattedMessage
      defaultMessage="Invite People"
      id="boxui.unifiedShare.inviteFieldLabel"
    />
  }
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[MockFunction]}
  onSelect={[MockFunction]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={Array []}
  selectorOptions={
    Array [
      Object {
        "avatarUrl": null,
        "email": "x@example.com",
        "id": "12345",
        "isExternalUser": false,
        "text": "X User",
        "type": "group",
        "value": "x@example.com",
      },
      Object {
        "avatarUrl": null,
        "email": "y@example.com",
        "id": "23456",
        "isExternalUser": true,
        "text": "Y User",
        "type": "user",
        "value": "y@example.com",
      },
      Object {
        "avatarUrl": "large_avatar.png",
        "email": "z@example.com",
        "id": "34567",
        "isExternalUser": false,
        "text": "Z User",
        "type": "user",
        "value": "z@example.com",
      },
      Object {
        "avatarUrl": null,
        "email": "a@example.com",
        "id": "12",
        "isExternalUser": true,
        "text": "a b",
        "type": "user",
        "value": "a@example.com",
      },
      Object {
        "avatarUrl": null,
        "email": "b@example.com",
        "id": "13",
        "isExternalUser": false,
        "text": "a b",
        "type": "user",
        "value": "b@example.com",
      },
      Object {
        "avatarUrl": null,
        "email": "c@example.com",
        "id": "14",
        "isExternalUser": true,
        "text": "a c",
        "type": "user",
        "value": "c@example.com",
      },
      Object {
        "avatarUrl": null,
        "email": "d@example.com",
        "id": "14",
        "isExternalUser": false,
        "text": "a d",
        "type": "user",
        "value": "d@example.com",
      },
      Object {
        "avatarUrl": null,
        "email": "e@example.com",
        "id": "14",
        "isExternalUser": true,
        "text": "a e",
        "type": "user",
        "value": "e@example.com",
      },
    ]
  }
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={false}
  showAvatars={false}
  showRoundedPills={false}
  validateForError={[MockFunction]}
  validator={[MockFunction]}
>
  <ContactDatalistItem
    avatarUrl={null}
    id="12345"
    key="12345"
    name="X User"
    showAvatar={false}
    subtitle="x@example.com"
    title="X User"
  />
  <ContactDatalistItem
    avatarUrl={null}
    id="23456"
    key="23456"
    name="Y User"
    showAvatar={false}
    subtitle="y@example.com"
    title="Y User"
  />
  <ContactDatalistItem
    avatarUrl="large_avatar.png"
    id="34567"
    key="34567"
    name="Z User"
    showAvatar={false}
    subtitle="z@example.com"
    title="Z User"
  />
  <ContactDatalistItem
    avatarUrl={null}
    id="12"
    key="12"
    name="a b"
    showAvatar={false}
    subtitle="a@example.com"
    title="a b"
  />
  <ContactDatalistItem
    avatarUrl={null}
    id="13"
    key="13"
    name="a b"
    showAvatar={false}
    subtitle="b@example.com"
    title="a b"
  />
  <ContactDatalistItem
    avatarUrl={null}
    id="14"
    key="14"
    name="a c"
    showAvatar={false}
    subtitle="c@example.com"
    title="a c"
  />
  <ContactDatalistItem
    avatarUrl={null}
    id="14"
    key="14"
    name="a d"
    showAvatar={false}
    subtitle="d@example.com"
    title="a d"
  />
  <ContactDatalistItem
    avatarUrl={null}
    id="14"
    key="14"
    name="a e"
    showAvatar={false}
    subtitle="e@example.com"
    title="a e"
  />
</PillSelectorDropdown>
`;

exports[`features/unified-share-modal/ContactsField render should render default component 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={false}
  className=""
  disabled={false}
  error=""
  inputProps={
    Object {
      "autoFocus": true,
      "onChange": [Function],
    }
  }
  label={
    <FormattedMessage
      defaultMessage="Invite People"
      id="boxui.unifiedShare.inviteFieldLabel"
    />
  }
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[MockFunction]}
  onSelect={[MockFunction]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={
    Array [
      Object {
        "avatarUrl": null,
        "email": "x@example.com",
        "id": "12345",
        "isExternalUser": false,
        "text": "X User",
        "type": "group",
        "value": "x@example.com",
      },
      Object {
        "avatarUrl": "default_avatar.png",
        "email": "y@example.com",
        "id": "23456",
        "isExternalUser": true,
        "text": "Y User",
        "type": "user",
        "value": "y@example.com",
      },
      Object {
        "avatarUrl": "large_avatar.png",
        "email": "z@example.com",
        "id": "34567",
        "isExternalUser": false,
        "text": "Z User",
        "type": "user",
        "value": "z@example.com",
      },
    ]
  }
  selectorOptions={Array []}
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={false}
  showAvatars={false}
  showRoundedPills={false}
  validateForError={[MockFunction]}
  validator={[MockFunction]}
/>
`;
